--- a/assets/css/blocks/_product-types.styl
+++ b/assets/css/blocks/_product-types.styl
@@ -94,12 +94,12 @@
         position: absolute
         display: block
         top: 0
-        right: 4px
+        right: 5px
         width: 515px
         height: 420px
         border-radius: 20px
         background: rgba(255,255,255,0.5)
-        box-shadow: -2px 0 15px rgba(0,0,0,.3)
+        box-shadow: -3px 0 15px rgba(0,0,0,.3)
         &-heading
             height: 55px
             background: 0 0 url(../img/textures/wood-texture.jpg)
